# ESP32-S3_FilamentTracker

./: CMakeLists.txt  Claude_Instructions.md  README.md  esp32_s3_filament_tracker_port_plan_api_complete.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.filament_tracker
data/: ams_links.json
main/: CMakeLists.txt  ams_service.c  ams_service.h  api_http.c  api_http.h  api_ws.c  api_ws.h  app_main.c  help_service.c  help_service.h  idf_component.yml  inventory_service.c  inventory_service.h  json_codec.c  json_codec.h  model_ams.h  model_filament.h  model_runtime.h  model_settings.h  mqtt_service.c  mqtt_service.h  settings_service.c  settings_service.h  sntp_service.c  sntp_service.h  storage_fs.c  storage_fs.h  storage_nvs.c  storage_nvs.h  wifi_manager.c  wifi_manager.h
memory/: decisions.md  preferences.md  suggestions.md  thoughts.md
scripts/: download_alpine.py  upload_fs_after.py
ui/: add-filament.html  ams.html  help.html  index.html  inventory.json  meta.json  mqtt.html  settings.html
ui/css/: site.css
ui/js/: ALPINE_DOWNLOAD.md  app.js
